--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk-browsers
+      - image: circleci/openjdk:8-jdk-node-browsers
         environment:
           MAVEN_OPTS: -Xmx3200m
       - image: circleci/mysql:5.7
