--- a/.travis.yml
+++ b/.travis.yml
@@ -16,26 +16,24 @@ matrix:
   include:
     - if: repo = gruelbox/orko AND branch = master AND NOT type = pull_request
       name: "JUnit tests"
-      script:
-        - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Pci -B -U -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      script: mvn -B -U -T 1C -Pci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     - if: repo = gruelbox/orko AND NOT branch = master AND NOT type = pull_request
       name: "JUnit tests"
-      script:
-        - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Pci -B -U -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dsonar.branch.name=$TRAVIS_BRANCH
+      script: mvn -B -U -T 1C -Pci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dsonar.branch.name=$TRAVIS_BRANCH
     - if: repo = gruelbox/orko AND head_repo = gruelbox/orko AND type = pull_request
       name: "JUnit tests"
-      script:
-        - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Pci -B -U -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dsonar.pullrequest.key=$TRAVIS_PULL_REQUEST -Dsonar.pullrequest.branch=$TRAVIS_PULL_REQUEST_BRANCH -Dsonar.pullrequest.base=$TRAVIS_BRANCH
+      script: mvn -B -U -T 1C -Pci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dsonar.pullrequest.key=$TRAVIS_PULL_REQUEST -Dsonar.pullrequest.branch=$TRAVIS_PULL_REQUEST_BRANCH -Dsonar.pullrequest.base=$TRAVIS_BRANCH
     - if: (repo = gruelbox/orko AND NOT head_repo = gruelbox/orko AND type = pull_request) OR NOT repo = gruelbox/orko
       name: "JUnit tests"
-      script:
-        - mvn -Pproduction clean install -B -U -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      script: mvn -B -U -T 1C -Pproduction clean install -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     - name: "Integration tests"
+      env: NODE_VERSION="11.3.0"
+      before_install: nvm install $NODE_VERSION
       env: CYPRESS_RECORD_KEY=a9198746-9196-45b3-ae90-2a7b7468051e
-      script: mvn -B -Pintegration-test clean integration-test -Dskip.surefire.tests=true -Dspotbugs.skip=true -Dcheckstyle.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      script: mvn -B -U -T 1C -Pintegration-test clean integration-test -Dskip.surefire.tests=true -Dspotbugs.skip=true -Dcheckstyle.skip -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     - name: "MySQL tests"
       before_install: mysql -e 'CREATE DATABASE test;'
-      script: mvn -B -Pwebdev test -Dmorf.mysql.noadmin=true -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dtestdb.url=mysql://travis@127.0.0.1/test
+      script: mvn -B -U -T 1C -Pwebdev test -Dmorf.mysql.noadmin=true -DskipSlowTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dtestdb.url=mysql://travis@127.0.0.1/test
 cache:
   npm: true
   directories:
