--- a/orko-end-to-end-testing/pom.xml
+++ b/orko-end-to-end-testing/pom.xml
@@ -85,6 +85,17 @@
         <version>${frontend-maven-plugin-version}</version>
         <executions>
           <execution>
+            <id>install node and npm</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>install-node-and-npm</goal>
+            </goals>
+            <configuration>
+              <nodeVersion>v8.11.1</nodeVersion>
+              <npmVersion>6.4.1</npmVersion>
+            </configuration>
+          </execution>
+          <execution>
             <id>npm ci</id>
             <phase>pre-integration-test</phase>
             <goals>
