--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -92,6 +92,10 @@
       <groupId>org.reflections</groupId>
       <artifactId>reflections</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.hamcrest</groupId>
