--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
     
     <!--<xchange.groupid>org.knowm.xchange</xchange.groupid>-->
     <xchange.groupid>com.github.badgerwithagun.XChange</xchange.groupid>
-    <xchange.version>orko-SNAPSHOT</xchange.version>
+    <xchange.version>orko.1</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
@@ -280,6 +280,11 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
         <version>4.2</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
       </dependency>
       <dependency>
         <groupId>com.google.inject.extensions</groupId>
