--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.gruelbox</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.10.3-SNAPSHOT</version>
+    <version>0.11.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
