--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -211,8 +213,8 @@
     <guice.version>4.2.2</guice.version>
     <autovalue.version>1.6.2</autovalue.version>
     <dropwizard.version>1.3.7</dropwizard.version>
-    
-    <!--<xchange.groupid>org.knowm.xchange</xchange.groupid>-->
+
+    <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
     <xchange.groupid>com.github.badgerwithagun.XChange</xchange.groupid>
     <xchange.version>orko.1</xchange.version>
 
@@ -222,14 +224,8 @@
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
-    
-    <dropwizard-guice-box-version>0.0.3</dropwizard-guice-box-version>
 
-    <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
-    <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
-    <frontend-maven-plugin-version>1.6</frontend-maven-plugin-version>
-    <process.exec.maven.plugin.version>0.7</process.exec.maven.plugin.version>
-    <sonar-jacoco-listeners.version>3.8</sonar-jacoco-listeners.version>
+    <dropwizard-guice-box-version>0.0.3</dropwizard-guice-box-version>
   </properties>
 
   <dependencyManagement>
@@ -486,7 +482,7 @@
       <dependency>
         <groupId>org.sonarsource.java</groupId>
         <artifactId>sonar-jacoco-listeners</artifactId>
-        <version>${sonar-jacoco-listeners.version}</version>
+        <version>3.8</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -516,27 +512,10 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin-version}</version>
+          <version>2.22.1</version>
           <configuration>
             <skipTests>${skip.surefire.tests}</skipTests>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.0.2</version>
-          <executions>
-            <execution>
-              <id>copy-dependencies</id>
-              <phase>package</phase>
-              <goals>
-                <goal>copy-dependencies</goal>
-              </goals>
-              <configuration>
-                <prependGroupId>true</prependGroupId>
-              </configuration>
-            </execution>
-          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -611,6 +590,21 @@
             </excludes>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.2.1</version>
+        </plugin>
+        <plugin>
+          <groupId>com.bazaarvoice.maven.plugins</groupId>
+          <artifactId>process-exec-maven-plugin</artifactId>
+          <version>0.7</version>
+        </plugin>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>1.6</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -618,7 +612,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>${maven.enforcer.plugin.version}</version>
+        <version>1.4.1</version>
         <executions>
           <execution>
             <id>enforce-maven-version</id>
