--- a/pom.xml
+++ b/pom.xml
@@ -305,8 +305,8 @@
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-all</artifactId>
-        <version>1.10.19</version>
+        <artifactId>mockito-core</artifactId>
+        <version>2.24.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
