--- a/orko-app/pom.xml
+++ b/orko-app/pom.xml
@@ -89,7 +89,7 @@
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                      <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
+                      <mainClass>${project.mainClass}</mainClass>
                     </transformer>
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                       <addHeader>false</addHeader>
@@ -103,88 +103,17 @@
       </build>
     </profile>
     <profile>
-      <id>docker</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.google.cloud.tools</groupId>
-            <artifactId>jib-maven-plugin</artifactId>
-            <version>1.6.1</version>
-            <configuration>
-              <to>
-                <image>orko:latest</image>
-              </to>
-              <container>
-                <jvmFlags>
-                  <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
-                  <jvmFlag>-XX:MaxRAMPercentage=75.0</jvmFlag>
-                  <jvmFlag>-Dsun.net.inetaddr.ttl=60</jvmFlag>
-                  <jvmFlag>-Dio.netty.leakDetectionLevel=advanced</jvmFlag>
-                  <jvmFlag>-Dmorf.mysql.noadmin=true</jvmFlag>
-                  <jvmFlag>-Ddw.server.connector.port=8080</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote=true</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.ssl=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.local.only=false</jvmFlag>
-                  <jvmFlag>-Djava.rmi.server.hostname=localhost</jvmFlag>
-                </jvmFlags>
-                <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
-                <args>
-                  <arg>server</arg>
-                  <arg>docker-config.yml</arg>
-                </args>
-                <ports>
-                  <port>8080</port>
-                </ports>
-              </container>
-            </configuration>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>buildTar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <id>dockerhub</id>
       <build>
         <plugins>
           <plugin>
             <groupId>com.google.cloud.tools</groupId>
             <artifactId>jib-maven-plugin</artifactId>
-            <version>1.6.1</version>
             <configuration>
               <to>
                 <image>docker.io/gruelbox/orko:${docker.tag}</image>
-                <auth>
-                  <username>${env.DOCKERHUB_USER}</username>
-                  <password>${env.DOCKERHUB_PASSWORD}</password>
-                </auth>
               </to>
               <container>
-                <jvmFlags>
-                  <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
-                  <jvmFlag>-XX:MaxRAMPercentage=75.0</jvmFlag>
-                  <jvmFlag>-Dsun.net.inetaddr.ttl=60</jvmFlag>
-                  <jvmFlag>-Dio.netty.leakDetectionLevel=advanced</jvmFlag>
-                  <jvmFlag>-Dmorf.mysql.noadmin=true</jvmFlag>
-                  <jvmFlag>-Ddw.server.connector.port=8080</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote=true</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.ssl=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.local.only=false</jvmFlag>
-                  <jvmFlag>-Djava.rmi.server.hostname=localhost</jvmFlag>
-                </jvmFlags>
-                <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
                 <args>
                   <arg>server</arg>
                   <arg>docker-config.yml</arg>
@@ -194,14 +123,6 @@
                 </ports>
               </container>
             </configuration>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>build</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
