--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -50,6 +52,8 @@
     <module>orko-job</module>
     <module>orko-common</module>
     <module>orko-app</module>
+    <module>orko-exchange-broker</module>
+    <module>orko-job-broker</module>
   </modules>
 
   <repositories>
@@ -223,7 +227,7 @@
 
     <!--<xchange.groupid>com.gruelbox</xchange.groupid> -->
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
-    <xchange.version>4.4.0</xchange.version>
+    <xchange.version>4.4.1-SNAPSHOT</xchange.version>
 
     <!--<xchange.stream.groupid>com.gruelbox</xchange.stream.groupid> -->
     <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
@@ -234,7 +238,7 @@
 
     <dropwizard-https-redirect-version>0.0.5</dropwizard-https-redirect-version>
     <dropwizard-guice-box-version>0.0.7</dropwizard-guice-box-version>
-  
+
     <asm.version>7.2</asm.version>
 
     <!-- Sonar -->
@@ -246,14 +250,15 @@
 
   <dependencyManagement>
     <dependencies>
-      
-      <!-- Required by maven-compiler-plugin and maven-surefire-plugin on JDK9+ -->
+
+      <!-- Required by maven-compiler-plugin and maven-surefire-plugin on 
+        JDK9+ -->
       <dependency>
         <groupId>org.javassist</groupId>
         <artifactId>javassist</artifactId>
         <version>3.26.0-GA</version>
       </dependency>
-      
+
       <dependency>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-bom</artifactId>
@@ -261,29 +266,29 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      
+
       <!-- Required by dropwizard on JDK9+ -->
       <dependency>
-          <groupId>javax.activation</groupId>
-          <artifactId>activation</artifactId>
-          <version>1.1.1</version>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
       </dependency>
       <dependency>
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <version>2.3.1</version>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
       </dependency>
       <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-core</artifactId>
-          <version>2.3.0.1</version>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0.1</version>
       </dependency>
       <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-impl</artifactId>
-          <version>2.3.2</version>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.2</version>
       </dependency>
-      
+
       <dependency>
         <groupId>com.gruelbox</groupId>
         <artifactId>dropwizard-https-redirect</artifactId>
@@ -531,6 +536,11 @@
         <artifactId>sonar-jacoco-listeners</artifactId>
         <version>5.14.0.18788</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>2.3.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -678,6 +688,45 @@
           <groupId>de.jutzig</groupId>
           <artifactId>github-release-plugin</artifactId>
           <version>1.4.0</version>
+        </plugin>
+        <plugin>
+          <groupId>com.google.cloud.tools</groupId>
+          <artifactId>jib-maven-plugin</artifactId>
+          <version>1.6.1</version>
+          <configuration>
+            <to>
+              <auth>
+                <username>${env.DOCKERHUB_USER}</username>
+                <password>${env.DOCKERHUB_PASSWORD}</password>
+              </auth>
+            </to>
+            <container>
+              <jvmFlags>
+                <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
+                <jvmFlag>-XX:MaxRAMPercentage=75.0</jvmFlag>
+                <jvmFlag>-Dsun.net.inetaddr.ttl=60</jvmFlag>
+                <jvmFlag>-Dio.netty.leakDetectionLevel=advanced</jvmFlag>
+                <jvmFlag>-Dmorf.mysql.noadmin=true</jvmFlag>
+                <jvmFlag>-Ddw.server.connector.port=8080</jvmFlag>
+                <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=9090</jvmFlag>
+                <jvmFlag>-Dcom.sun.management.jmxremote=true</jvmFlag>
+                <jvmFlag>-Dcom.sun.management.jmxremote.port=9090</jvmFlag>
+                <jvmFlag>-Dcom.sun.management.jmxremote.ssl=false</jvmFlag>
+                <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
+                <jvmFlag>-Dcom.sun.management.jmxremote.local.only=false</jvmFlag>
+                <jvmFlag>-Djava.rmi.server.hostname=localhost</jvmFlag>
+              </jvmFlags>
+              <mainClass>${project.mainClass}</mainClass>
+            </container>
+          </configuration>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>build</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
