--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,6 @@ workflows:
           filters:
             tags:
               only: /^.*\.((?!SNAPSHOT).)*/
-            branches:
-              only:
-                - master
-                - stable
       - "Deploy release to GitHub":
           requires:
             - "Unit tests (all)"
@@ -76,7 +72,7 @@ jobs:
             - node-v5-
       - run:
           name: Build
-          command: mvn ${BUILD_ARGS} -T 1C -U -Pui,bundle clean install -Dskip.failsafe.tests=true -DskipTests=true
+          command: mvn ${BUILD_ARGS} -T 1C -U -Pui,brokers,bundle clean install -Dskip.failsafe.tests=true -DskipTests=true
       - save_cache:
           paths:
             - ~/.m2
@@ -122,7 +118,7 @@ jobs:
             if [[ -n "$SONARQUBE_TOKEN" ]]; then
               echo "Build and Sonar"
               export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
-              export SONAR_TARGETS="-Pci org.jacoco:jacoco-maven-plugin:prepare-agent@default-prepare-agent surefire:test org.jacoco:jacoco-maven-plugin:report@default-report sonar:sonar"
+              export SONAR_TARGETS="-Pci,brokers org.jacoco:jacoco-maven-plugin:prepare-agent@default-prepare-agent surefire:test org.jacoco:jacoco-maven-plugin:report@default-report sonar:sonar"
               export SONAR_ARGS="-Dsonar.host.url=https://sonarcloud.io \
                   -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
                   -Dsonar.login=${SONARQUBE_TOKEN}
@@ -229,7 +225,7 @@ jobs:
       - run:
           name: MySQL tests
           command: |
-            mvn ${BUILD_ARGS} -Pdbonly surefire:test \
+            mvn ${BUILD_ARGS} -Pbrokers,dbonly surefire:test \
               -Dmorf.mysql.noadmin=true \
               -Dtestdb.url=mysql://open:sesame@127.0.0.1/test \
               -Dskip.failsafe.tests=true
@@ -256,15 +252,15 @@ jobs:
             if [[ (-n "$DOCKERHUB_USER") && (-n "$DOCKERHUB_PASSWORD") ]]; then
               cd orko-app
               if [[ -n "$CIRCLE_TAG" ]]; then
-                mvn ${BUILD_ARGS} -Pui,dockerhub jib:build -Ddocker.tag="$CIRCLE_TAG"
+                mvn ${BUILD_ARGS} -Pui,brokers,dockerhub jib:build -Ddocker.tag="$CIRCLE_TAG"
               else
                 if [[ "$CIRCLE_BRANCH" == "stable" ]]; then
-                  mvn ${BUILD_ARGS} -Pui,dockerhub jib:build -Ddocker.tag="stable"
+                  mvn ${BUILD_ARGS} -Pui,brokers,dockerhub jib:build -Ddocker.tag="stable"
                 else
                   if [[ (-z "$CIRCLE_BRANCH") || ("$CIRCLE_BRANCH" == "master") ]]; then
-                    mvn ${BUILD_ARGS} -Pui,dockerhub jib:build -Ddocker.tag="latest"
+                    mvn ${BUILD_ARGS} -Pui,brokers,dockerhub jib:build -Ddocker.tag="latest"
                   else
-                    echo "Skipping branch"
+                    mvn ${BUILD_ARGS} -Pui,brokers,dockerhub jib:build -Ddocker.tag="dev-donotuse-$CIRCLE_BRANCH"
                   fi
                 fi
               fi
@@ -294,7 +290,7 @@ jobs:
                 if [[ (-z "$CIRCLE_BRANCH") || ("$CIRCLE_BRANCH" == "master") ]]; then
                   COMMIT_MESSAGE=`git log --format=%B -n 1 $CIRCLE_SHA1`
                   if [[ $COMMIT_MESSAGE != *"prepare release"* ]]; then
-                    mvn ${BUILD_ARGS} -Pui github-release:release \
+                    mvn ${BUILD_ARGS} -Pbrokers,ui github-release:release \
                       --settings ../etc/.maven-settings.xml \
                       -Dgithub.commitish=$CIRCLE_SHA1 \
                       -Dgithub.draft=false \
