--- a/orko-job-broker/src/main/jib/docker-config.yml
+++ b/orko-job-broker/src/main/jib/docker-config.yml
@@ -54,6 +54,7 @@ jerseyClient:
 logging:
   loggers:
     "com.gruelbox.orko": ${LOG_LEVEL:-INFO}
+    "com.gruelbox.orko.docker": ${LOG_LEVEL_DOCKER_SECRETS:-INFO}
     "info.bitrich.xchangestream.service.netty": ${LOG_LEVEL:-INFO}
     "info.bitrich.xchangestream.binance": ${LOG_LEVEL:-INFO}
     "info.bitrich.xchangestream.gdax": ${LOG_LEVEL:-INFO}
