--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,7 +302,7 @@ jobs:
                 if [[ (-z "$CIRCLE_BRANCH") || ("$CIRCLE_BRANCH" == "master") ]]; then
                   COMMIT_MESSAGE=`git log --format=%B -n 1 $CIRCLE_SHA1`
                   if [[ $COMMIT_MESSAGE != *"prepare release"* ]]; then
-                    mvn ${BUILD_ARGS} -Pbrokers,ui github-release:release \
+                    mvn ${BUILD_ARGS} -Pui github-release:release \
                       --settings ../etc/.maven-settings.xml \
                       -Dgithub.commitish=$CIRCLE_SHA1 \
                       -Dgithub.draft=false \
