--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
 
     <!--<xchange.groupid>com.gruelbox</xchange.groupid> -->
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
-    <xchange.version>4.4.0</xchange.version>
+    <xchange.version>4.4.1-SNAPSHOT</xchange.version>
 
     <!--<xchange.stream.groupid>com.gruelbox</xchange.stream.groupid> -->
     <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
